F(x)tec Pro1 X Fix dot not found issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2123,12 +2123,16 @@ F(x)tec Pro1 X</h3>
     如何擴展home.img空間成256GB</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/fix_gallery.htm">
+    解決Gallery圖片無法刪除了問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/fix_declare.htm">
     解決"declare not found"問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/pro1x/fix_gallery.htm">
-    解決Gallery圖片無法刪除了問題</a><br>
+    <a href="phone/pro1x/fix_dot.htm">
+    解決"Program dot not found"問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_build_kernel.htm">
