--- a/phone/pro1x/fix_dot.htm
+++ b/phone/pro1x/fix_dot.htm
@@ -46,13 +46,20 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 X &gt;&gt; Sailfish</h3>
-<p><b>解決"declare not found"問題</b></p>
+<p><b>解決"Program dot not found"問題</b></p>
 <hr size="1">
 <p>
 解法如下：<br>
 </p>
 <pre>
-$ sudo zypper install gnu-bash
+$ cd
+$ wget https://gitlab.com/api/v4/projects/4207231/packages/generic/graphviz-releases/8.0.1/graphviz-8.0.1.tar.gz
+$ tar xvf graphviz-8.0.1.tar.gz
+$ cd graphviz-8.0.1
+$ ./autogen.sh
+$ ./configure
+$ make -j4
+$ sudo make install
 </pre><br>
 
 <p>
