F(x)tec Pro1 X Fix lupdate not found issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2135,6 +2135,10 @@ F(x)tec Pro1 X</h3>
     解決"Program dot not found"問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/fix_lupdate.htm">
+    解決"/usr/lib64/qt5/bin/lupdate No such file or directory"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/so_build_kernel.htm">
     build kernel 4.19.157</a><br>
 
