F(x)tec Pro1 How to install sailfish 32bit.

--- a/phone.htm
+++ b/phone.htm
@@ -2227,6 +2227,13 @@ F(x)tec Pro1</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1/fix_unlock.htm">
     解決"FAILED (remote: 'Flashing is not allowed in Lock State')fastboot: error: Command failed"}"問題</a><br>
+
+&oplus;
+<b>Sailfish</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1/install_sailfish.htm">
+    安裝系統</a><br>
 <br><br><br><br>
     
 <div id="titan"></div>
