F(x)tec Pro1 X Set desktop in landscape mode.

--- a/phone.htm
+++ b/phone.htm
@@ -2119,6 +2119,10 @@ F(x)tec Pro1 X</h3>
     如何安裝storeman</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1x/sfos_landscape.htm">
+    如何讓桌面可以橫向顯示</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1x/resize_home.htm">
     如何擴展home.img空間成256GB</a><br>
 
