F(x)tec Pro1 Set desktop in landscape mode.

--- a/phone.htm
+++ b/phone.htm
@@ -2238,6 +2238,10 @@ F(x)tec Pro1</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1/install_sailfish.htm">
     安裝系統</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1/sfos_landscape.htm">
+    如何讓桌面可以橫向顯示</a><br>
 <br><br><br><br>
     
 <div id="titan"></div>
