F(x)tec Pro1 How to install stock android.

--- a/phone.htm
+++ b/phone.htm
@@ -2207,6 +2207,13 @@ F(x)tec Pro1</h3>
 介紹</a><br>
 
 &oplus;
+<b>Android</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1/install_android.htm">
+    安裝系統</a><br>
+
+&oplus;
 <b>LineageOS</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
