F(x)tec Pro1 Fix libcurl issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2257,6 +2257,10 @@ F(x)tec Pro1</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1/sfos_landscape.htm">
     如何讓桌面可以橫向顯示</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1/sfos_fix_libcurl.htm">
+    解決卡在"Enter Secure Code"畫面的問題</a><br>
 <br><br><br><br>
     
 <div id="titan"></div>
