F(x)tec Pro1 X Refined.

--- a/phone/pro1/sfos_fix_libcurl.htm
+++ b/phone/pro1/sfos_fix_libcurl.htm
@@ -45,10 +45,10 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>F(x)tec Pro1 &gt;&gt; Sailfish</h3>
-<p><b>解決卡在"Enter Secure Code"畫面的問題</b></p>
+<p><b>解決卡在"Enter secure code"畫面的問題</b></p>
 <hr size="1">
 <p>
-解法：升級到4.5.0.19
+解法：升級到4.4.0.72
 </p>
 
 <p>
