--- a/phone/pro1x/sfos_upgrade.htm
+++ b/phone/pro1x/sfos_upgrade.htm
@@ -61,7 +61,10 @@ $ devel-su
 # zypper dup
 # zypper rm gmp-droid
 # reboot
-</pre><br>
+</pre>
+<p>
+P.S. 記得保留PulseAudio套件不要更新
+</p>
 
 <p>
 <br><a href="../../phone.htm">返回上一頁</a>
