--- a/phone.htm
+++ b/phone.htm
@@ -2260,7 +2260,7 @@ F(x)tec Pro1</h3>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1/sfos_fix_libcurl.htm">
-    解決卡在"Enter Secure Code"畫面的問題</a><br>
+    解決卡在"Enter secure code"畫面的問題</a><br>
 <br><br><br><br>
     
 <div id="titan"></div>
