F(x)tec Pro1 Refined.

--- a/phone/pro1/sfos_backup.htm
+++ b/phone/pro1/sfos_backup.htm
@@ -49,7 +49,8 @@
 <hr size="1">
 <p>
 步驟如下：<br>
-1. 進入fastboot模式並且連接到PC
+1. 備份<b>/dev/block/platform/soc/by-name/boot_a</b>、<b>/dev/block/platform/soc/by-name/boot_b</b><br>
+2. 進入fastboot模式並且連接到PC
 </p>
 <pre>
 $ cd
@@ -57,10 +58,10 @@ $ wget https://github.com/steward-fu/archives/releases/download/pro1/twrp-3.3.1-
 $ fastboot flash boot twrp-3.3.1-qx1000.img
 </pre><br>
 <p>
-2. 進入recovery模式(先進入fastboot模式，再透過選單進入recovery模式)<br>
+3. 進入recovery模式(先進入fastboot模式，再透過選單進入recovery模式)<br>
 <img src="sfos_backup/1.jpg" class="maxSize"><br><br>
 
-3. 透過ADB備份
+4. 透過ADB備份
 </p>
 <pre>
 $ adb pull /dev/block/sda sda.img
@@ -80,6 +81,13 @@ $ adb pull /dev/block/sde sde.img
 
 $ adb pull /dev/block/sdf sdf.img
     /dev/block/sdf: 1 file pulled. 32.4 MB/s (1610612736 bytes in 47.422s)
+</pre><br>
+<p>
+5. 進入fastboot模式並且回復boot_a、boot_b
+</p>
+<pre>
+$ fastboot flash boot_a xxx
+$ fastboot flash boot_b xxx
 </pre><br>
 
 <p>
