F(x)tec Pro1 X Refined.

--- a/phone/pro1x/so_backup.htm
+++ b/phone/pro1x/so_backup.htm
@@ -53,7 +53,8 @@
 2. <a href="https://download.lineageos.org/devices/pro1x/builds">build</a><br><br>
 
 步驟如下：<br>
-1. 進入fastboot模式並且連接到PC
+1. 備份<b>/dev/block/platform/soc/by-name/boot_a</b>、<b>/dev/block/platform/soc/by-name/boot_b</b><br>
+2. 進入fastboot模式並且連接到PC
 </p>
 <pre>
 $ cd
@@ -62,13 +63,13 @@ $ fastboot flash recovery recovery.img
 </pre><br>
 
 <p>
-2. 進入recovery模式(先進入fastboot模式，再透過選單進入recovery模式)<br>
+3. 進入recovery模式(先進入fastboot模式，再透過選單進入recovery模式)<br>
 <img src="so_backup/1.jpg" class="maxSize"><br><br>
 
-3. Advanced &gt; Enable ADB<br>
+4. Advanced &gt; Enable ADB<br>
 <img src="so_backup/2.jpg" class="maxSize"><br><br>
 
-4. 透過ADB備份
+5. 透過ADB備份
 </p>
 <pre>
 $ adb pull /dev/block/sda sda.img
@@ -88,6 +89,14 @@ $ adb pull /dev/block/sde sde.img
 
 $ adb pull /dev/block/sdf sdf.img
     /dev/block/sdf: 1 file pulled. 37.1 MB/s (134217728 bytes in 3.452s)
+</pre><br>
+
+<p>
+6. 進入fastboot模式並且回復boot_a、boot_b
+</p>
+<pre>
+$ fastboot flash boot_a xxx
+$ fastboot flash boot_b xxx
 </pre><br>
 
 <p>
