F(x)tec Pro1 X Fix speaker issue.

--- a/phone/pro1x/fix_speaker.htm
+++ b/phone/pro1x/fix_speaker.htm
@@ -50,9 +50,10 @@
 <hr size="1">
 <p>
 參考資料：<br>
-1. <a href="https://community.fxtec.com/topic/3638-pro1x-problems-with-bottomright-loudspeaker-repair-guide/?tab=comments#comment-62702">pro1x-problems-with-bottomright-loudspeaker-repair-guide</a><br><br>
+1. <a href="https://drive.google.com/drive/folders/1ZkyDj_dCBK6W4AMysZpe0w6WfY5XFaFq?usp=sharing">Release_SM6115_S701_gms_V2.1.6_20220914-1849_userdebug</a><br>
+2. <a href="https://community.fxtec.com/topic/3638-pro1x-problems-with-bottomright-loudspeaker-repair-guide/?tab=comments#comment-62702">pro1x-problems-with-bottomright-loudspeaker-repair-guide</a><br><br>
 
-Workaround：把聲音開超過75%
+解決方式：<a href="Release_SM6115_S701_gms_V2.1.6_20220914-1849_userdebug.zip">v2.1.6 Firmware</a>
 </p>
 
 <p>
