PSP Go Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -3759,6 +3759,10 @@ PSP Go</h3>
 介紹</a><br>
 
 &lowast;
+<a href="handheld/pspgo/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/pspgo/extended_battery.htm">
 電池厚蓋</a><br>
 
