PINE64 PinePhone Typo.

--- a/phone/pinephone/mobian_xfce4.htm
+++ b/phone/pinephone/mobian_xfce4.htm
@@ -76,8 +76,9 @@ $ sync
 $ cd
 $ git clone https://codeberg.org/HazardChem/PinePhone_Keyboard
 $ cd PinePhone_Keyboard
-$ sudo cp -a xkb/* usr/share/X11/xkb/
-$ sudo cp xkb/10-pinephone-keyboard.conf usr/share/X11/xorg.conf.d/
+$ sudo cp -a xkb/* /usr/share/X11/xkb/
+$ sudo mkdir -p /usr/share/X11/xorg.conf.d
+$ sudo cp xkb/10-pinephone-keyboard.conf /usr/share/X11/xorg.conf.d/
 </pre>
 <p>
 這樣重新開機後，就可以使用AltG組合鍵，如：<b>AltG + 7 = '</b><br><br>
