Nintendo New 3DS Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -189,6 +189,7 @@
     <a href="#nds"><img src="img/photos/nds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS"/></a>
     <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
     <a href="#3ds"><img src="img/photos/3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS"/></a>
+    <a href="#new3ds"><img src="img/photos/new3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo New 3DS"/></a>
     <a href="#miyoo"><img src="img/photos/miyoo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo"/></a>
     <a href="#pocketgo"><img src="img/photos/pocketgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PocketGo"/></a>
     <a href="#miyoomax"><img src="img/photos/miyoomax.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo Max"/></a>
@@ -5209,6 +5210,15 @@ Nintendo 3DS</h3>
 <hr size="1"><br><br><br><br><br>
 &lowast;
 <a href="handheld/3ds/review.htm">
+介紹</a><br>
+<br><br><br><br>
+
+<div id="new3ds"></div>
+<h3><img src="img/photos/new3ds.jpg" class="floatLeft"/>
+Nintendo New 3DS</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="handheld/new3ds/review.htm">
 介紹</a><br>
 <br><br><br><br>
 
