Nintendo New 3DS Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5208,6 +5208,7 @@ Nintendo DS Lite</h3>
 <h3><img src="img/photos/3ds.jpg" class="floatLeft"/>
 Nintendo 3DS</h3>
 <hr size="1"><br><br><br><br><br>
+
 &lowast;
 <a href="handheld/3ds/review.htm">
 介紹</a><br>
@@ -5217,9 +5218,14 @@ Nintendo 3DS</h3>
 <h3><img src="img/photos/new3ds.jpg" class="floatLeft"/>
 Nintendo New 3DS</h3>
 <hr size="1"><br><br><br><br><br>
+
 &lowast;
 <a href="handheld/new3ds/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/new3ds/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="miyoo"></div>
