Nintendo New 3DS Refined.

--- a/handheld/new3ds/review.htm
+++ b/handheld/new3ds/review.htm
@@ -53,11 +53,11 @@
 <table>
   <tr><th>CPU</th><td>ARM11 MPCore quad-core 804MHz</td></tr>
   <tr><th>GPU</th><td>DMP PICA200 268MHz</td></tr>
-  <tr><th>RAM</th><td>256 MB (64MB dedicated to the OS), 10 MB VRAM</td></tr>
+  <tr><th>RAM</th><td>256MB (64MB dedicated to the OS), 10MB VRAM</td></tr>
   <tr><th>Flash</th><td>1GB</td></tr>
   <tr><th>Top Screen</th><td>3.88" 400x240</td></tr>
   <tr><th>Bottom Screen</th><td>3.33" 320x240 (Resistive Touch)</td></tr>
-  <tr><th>Slot</th><td>Game Card and SDCard</td></tr>
+  <tr><th>Slot</th><td>Game Card and MicroSD</td></tr>
   <tr><th>WLAN</th><td>Wi-Fi 802.11 b/g</td></tr>
   <tr><th>Gamepad</th><td>DPad, 4 Buttons, Start, Home, Select, L1, L2, R1, R2 and Analog Stick</td></tr>
   <tr><th>Battery</th><td>3.7V 1400mA</td></tr>
