--- a/handheld.htm
+++ b/handheld.htm
@@ -190,6 +190,7 @@
     <a href="#ndsl"><img src="img/photos/ndsl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo DS Lite"/></a>
     <a href="#3ds"><img src="img/photos/3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 3DS"/></a>
     <a href="#new3ds"><img src="img/photos/new3ds.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo New 3DS"/></a>
+    <a href="#2dsxl"><img src="img/photos/2dsxl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nintendo 2DS XL"/></a>
     <a href="#miyoo"><img src="img/photos/miyoo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo"/></a>
     <a href="#pocketgo"><img src="img/photos/pocketgo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PocketGo"/></a>
     <a href="#miyoomax"><img src="img/photos/miyoomax.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Miyoo Max"/></a>
@@ -5226,6 +5227,16 @@ Nintendo New 3DS</h3>
 &lowast;
 <a href="handheld/new3ds/teardown.htm">
 拆機</a><br>
+<br><br><br><br>
+
+<div id="2dsxl"></div>
+<h3><img src="img/photos/2dsxl.jpg" class="floatLeft"/>
+Nintendo 2DS XL</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/2dsxl/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="miyoo"></div>
