Nintendo 2DS XL Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -5237,6 +5237,10 @@ Nintendo 2DS XL</h3>
 &lowast;
 <a href="handheld/2dsxl/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/2dsxl/teardown.htm">
+拆機</a><br>
 <br><br><br><br>
 
 <div id="miyoo"></div>
