--- a/picture/openscad/syntax.htm
+++ b/picture/openscad/syntax.htm
@@ -48,29 +48,29 @@
 <p><b>基本語法</b></p>
 <hr size="1">
 <p>
-學習程式語言最禁忌從基礎語法學起，因為語法還沒看完就放棄了！因此，司徒建議語法部份當作手冊來看待，需要時再來翻閱即可，使用者只要找一個簡單範例，試圖修改學習即可，先求有再求好，慢慢建立自己的信心才是學習的王道，當然也不用太在意自己的程式寫的有多爛，因為那些都是必經之路，興趣才是驅使作品完美的靈魂。<br><br>
-
 <b>註解(comments)</b><br>
-單行註解請使用<b>//</b>；而多行註解則是<b>/**/</b>
+單行註解使用<b>//</b><br>
+多行註解則是<b>/**/</b>
 </p>
 <pre class="brush:scad">
-// single line comment
+// comment
 myvar = 10;
+
 /*
-  multi-line coments
+  comment
 */
 </pre><br>
 
 <p>
 <b>變數(variables)</b><br>
-直接指定數值即可，不需宣告，如下範例：
+直接指定數值即可，不需要宣告
 </p>
 <pre class="brush:scad">
 myvar = 10;
 myvar = 9.9;
 </pre>
 <p>
-P.S. 如多次宣告，則以最後宣告的為主(variables are set at compile-time, not run-time)，因此，上例的myvar數值是9.9<br><br>
+P.S. 如多次宣告，則以最後宣告的為主，上例的myvar數值是9.9<br><br>
 
 <b>布林值(boolean)</b><br>
 </p>
@@ -125,8 +125,8 @@ myvar = "testing"
 <b>迴圈：向量(vector)</b>
 </p>
 <pre class="brush:scad">
-for(x=[0, 10]){
-  echo("val: ", x);
+for (x = [0, 10]) {
+    echo("val: ", x);
 }
 </pre>
 
@@ -135,11 +135,11 @@ for(x=[0, 10]){
 ECHO: "val: ", 0<br>
 ECHO: "val: ", 10<br><br>
 
-使用者需注意，迴圈只會解讀一層，因此可以使用上面的例子與下例比較：
+需注意，迴圈只會解讀一層，因此可以使用上面的例子與下例比較：
 </p>
 <pre class="brush:scad">
-for(x=[[0, 6], [1, 8]]){
-  echo("val: ", x);
+for (x = [[0, 6], [1, 8]]) {
+    echo("val: ", x);
 }
 </pre>
 <p>
@@ -151,8 +151,8 @@ ECHO: "val: ", [1, 8]<br><br>
 預設的間距是<b>1</b>
 </p>
 <pre class="brush:scad">
-for(x=[0:3]){
-  echo("val:", x);
+for (x = [0 : 3]) {
+    echo("val:", x);
 }
 </pre>
 
@@ -163,11 +163,11 @@ ECHO: "val: ", 1<br>
 ECHO: "val: ", 2<br>
 ECHO: "val: ", 3<br><br>
 
-使用者也可指定間距，如下範例：
+使用者也可指定間距
 </p>
 <pre class="brush:scad">
-for(x=[0:0.2:1]){
-  echo("val:", x);
+for (x = [0 : 0.2 : 1]) {
+    echo("val:", x);
 }
 </pre>
 
@@ -184,8 +184,8 @@ ECHO: "val: ", 1<br><br>
 </p>
 
 <pre class="brush:scad">
-for(x=[0:2], y=[0:1]){
-  echo("val:", x, y);
+for (x = [0 : 2], y = [0 : 1]) {
+    echo("val:", x, y);
 }
 </pre>
 
@@ -203,18 +203,20 @@ ECHO: "val: ", 2, 1<br><br>
 <pre class="brush:scad">
 a = 1;
 b = 2;
-if (a == b){
-  echo("a=b");
+if (a == b) {
+    echo("a = b");
 }
-else if ( a &gt; b){
-  echo("a&gt;b");
+else if ( a &gt; b) {
+    echo("a &gt; b");
 }
-else{
-  echo("other");
+else {
+    echo("other");
 }
-</pre><br>
-
+</pre>
 <p>
+上例結果：<br>
+ECHO: "other"<br><br>
+
 <b>數學運算(scalar arithmetical operators)</b>
 </p>
 <table>
@@ -262,11 +264,11 @@ c = a == b ? 3 : 4
 <pre>
 a = 0;
 b = 1;
-if ( a == b){
-  c = 3;
+if ( a == b) {
+    c = 3;
 }
-else{
-  c = 4;
+else {
+    c = 4;
 }
 </pre>
 
