--- a/picture/openscad/cheatsheet.htm
+++ b/picture/openscad/cheatsheet.htm
@@ -48,7 +48,10 @@
 <p><b>cheatsheet</b></p>
 <hr size="1">
 <p>
-好用的公式表<br>
+參考資訊：<br>
+1. <a href="https://openscad.org/cheatsheet/">cheatsheet</a><br><br>
+
+公式表<br>
 <img src="cheatsheet/1.jpg" class="maxSize">
 </p>
 
