--- a/picture/openscad/cube.htm
+++ b/picture/openscad/cube.htm
@@ -44,37 +44,34 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>OpenSCAD &gt;&gt; 3D物件</h3>
+<h3>OpenSCAD &gt;&gt; 3D</h3>
 <p><b>cube</b></p>
 <hr size="1">
 <p>
-cube的表示方式有兩種：
+使用方式：
 </p>
 <pre class="brush:scad">
 cube(size, center);
 cube([x, y, z], center);
 </pre>
 <p>
-P.S. 等邊就用第一種簡易表示方式，不然就用第二種<br><br>
+P.S. 第一種方式代表x、y、z都是一樣的邊長<br><br>
 
-如下範例就是使用等邊的方式(注意單位是mm，這是3D印表機的實際列印尺寸)<br>
+程式寫好後，按下F5後，再按下F6就可以顯示，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br>
 <img src="cube/1.jpg" class="maxSize"><br>
-P.S. 程式寫好後，按下F5然後再按F6就可以顯示，滑鼠放在cube上方並且按下左鍵拖曳就可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵則是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸<br><br>
 
-center就是置中顯示(預設是false，也就是起始點是x=0, y=0, z=0)<br>
+輸出STL檔案<br>
 <img src="cube/2.jpg" class="maxSize"><br><br>
 
-最後，寫一個高級一點的cube<br>
-<img src="cube/3.jpg" class="maxSize"><br>
-P.S. 兩個cube疊加在一起了！這種方式(兩個物件疊加在一起)還有一個專有名稱叫做union，也就是<b>你的東西</b>加上<b>我的東西</b>的概念<br><br>
+使用切片軟體將STL轉換成GCODE<br>
+<img src="cube/3.jpg" class="maxSize"><br><br>
 
-接著輸出STL檔案<br>
-<img src="cube/4.jpg" class="maxSize"><br><br>
+3D印表機列印<br>
+<img src="cube/4.jpg" class="maxSize"><br>
 
-接著把這個STL檔案拿去3D印表機列印<br>
-<img src="cube/5.jpg" class="maxSize"><br>
-<img src="cube/6.jpg" class="maxSize"><br>
-<img src="cube/7.jpg" class="maxSize">
+完成<br>
+<img src="cube/5.jpg" class="maxSize">
 </p>
 
 <p>
