--- a/picture/openscad/cube.htm
+++ b/picture/openscad/cube.htm
@@ -68,7 +68,7 @@ P.S. 單位是mm，這是3D印表機的實際列印尺寸<br><br>
 <img src="cube/3.jpg" class="maxSize"><br><br>
 
 3D印表機列印<br>
-<img src="cube/4.jpg" class="maxSize"><br>
+<img src="cube/4.jpg" class="maxSize"><br><br>
 
 完成<br>
 <img src="cube/5.jpg" class="maxSize">
