--- a/picture/openscad/cylinder.htm
+++ b/picture/openscad/cylinder.htm
@@ -44,32 +44,34 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>OpenSCAD &gt;&gt; 3D物件</h3>
+<h3>OpenSCAD &gt;&gt; 3D</h3>
 <p><b>cylinder</b></p>
 <hr size="1">
 <p>
-cylinder的表示方式有兩種：
+使用方式：
 </p>
 <pre class="brush:scad">
 cylinder(h, r | d, center);
 cylinder(h, r1 | d1, r2 | d2, center);
 </pre>
 <p>
-P.S. h(高度)、r(半徑)、d(直徑)、r1(底面的半徑)、d1(底面的直徑)、r2(上面的半徑)、d2(上面的直徑)，第二個參數預設值是r1<br><br>
+P.S. h(高度)、r(半徑)、d(直徑)、r1(底面的半徑)、d1(底面的直徑)、r2(上面的半徑)、d2(上面的直徑)，第二個預設參數是r1<br><br>
+i
+程式寫好後，按下F5後，再按下F6就可以顯示，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br>
+<img src="cylinder/1.jpg" class="maxSize"><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸，<b>$fn</b>代表精細程度<br><br>
 
-如果只有填兩個參數，則第二個參數以r1代表<br>
-<img src="cylinder/5.jpg" class="maxSize"><br><br>
+輸出STL檔案<br>
+<img src="cylinder/2.jpg" class="maxSize"><br><br>
 
-如下範例代表：<b>(h=0, r1=10, r2=10)</b>、<b>(h=10, r=10)</b>、<b>(h=10, d=20)</b><br>
-<img src="cylinder/6.jpg" class="maxSize"><br><br>
+使用切片軟體將STL轉換成GCODE<br>
+<img src="cylinder/3.jpg" class="maxSize"><br><br>
 
-最後，寫一個高級一點的cylinder</b><br>
-<img src="cylinder/1.jpg" class="maxSize"><br><br>
+3D印表機列印<br>
+<img src="cylinder/4.jpg" class="maxSize"><br><br>
 
-接著把這個STL檔案拿去3D印表機列印<br>
-<img src="cylinder/2.jpg" class="maxSize"><br>
-<img src="cylinder/3.jpg" class="maxSize"><br>
-<img src="cylinder/4.jpg" class="maxSize">
+完成<br>
+<img src="cylinder/5.jpg" class="maxSize">
 </p>
 
 <p>
