--- a/picture/openscad/sphere.htm
+++ b/picture/openscad/sphere.htm
@@ -44,27 +44,32 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>OpenSCAD &gt;&gt; 3D物件</h3>
+<h3>OpenSCAD &gt;&gt; 3D</h3>
 <p><b>sphere</b></p>
 <hr size="1">
 <p>
-sphere的表示方式如下：
+使用方式：
 </p>
 <pre class="brush:scad">
 sphere(r | d);
 </pre>
 <p>
-P.S. r(半徑)、d(直徑)，固定置中顯示，預設是參數r<br><br>
+P.S. r(半徑)、d(直徑)，預設參數是r<br><br>
 
-只要填入半徑(預設是參數r)即可，所以如下範例代表：r=10或者d=20<br>
-<img src="sphere/1.jpg" class="maxSize"><br><br>
+程式寫好後，按下F5後，再按下F6就可以顯示，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸
+<img src="sphere/1.jpg" class="maxSize"><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸，<b>$fn</b>代表精細程度<br><br>
 
-<b>$fn</b>用來表示粗糙程度<br>
+輸出STL檔案<br>
 <img src="sphere/2.jpg" class="maxSize"><br><br>
 
-接著把這個STL檔案拿去3D印表機列印<br>
-<img src="sphere/3.jpg" class="maxSize"><br>
-<img src="sphere/4.jpg" class="maxSize"><br>
+使用切片軟體將STL轉換成GCODE<br>
+<img src="sphere/3.jpg" class="maxSize"><br><br>
+
+3D印表機列印<br>
+<img src="sphere/4.jpg" class="maxSize"><br><br>
+
+完成<br>
 <img src="sphere/5.jpg" class="maxSize">
 </p>
 
