OpenSCAD How to translate.

--- a/picture.htm
+++ b/picture.htm
@@ -121,6 +121,10 @@ cheatsheet</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="picture/openscad/cylinder.htm">
     cylinder</a><br>
+
+&lowast;
+<a href="picture/openscad/translate.htm">
+translate</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
