--- a/picture/openscad/translate.htm
+++ b/picture/openscad/translate.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>OpenSCAD &gt;&gt; 3D</h3>
+<h3>OpenSCAD</h3>
 <p><b>translate</b></p>
 <hr size="1">
 <p>
