--- a/picture/cnc1610pro/mat.htm
+++ b/picture/cnc1610pro/mat.htm
@@ -48,10 +48,10 @@
 <p><b>靜音墊</b></p>
 <hr size="1">
 <p>
-由於司徒的桌子不夠厚重，當CNC1610 Pro在刨線時，那噪音真的相當大聲，為此，司徒特意購買靜音墊<br>
+CNC1610 Pro在雕刻時，那噪音真的相當大聲，為此，司徒特意購買靜音墊<br>
 <img src="mat/1.jpg" class="maxSize"><br><br>
 
-墊上8塊，噪音確實改善相當多～<br>
+噪音確實改善相當多～<br>
 <img src="mat/2.jpg" class="maxSize">
 </p>
 
