OpenSCAD How to use resize.

--- a/picture.htm
+++ b/picture.htm
@@ -125,6 +125,10 @@ cheatsheet</a><br>
 &lowast;
 <a href="picture/openscad/translate.htm">
 translate</a><br>
+
+&lowast;
+<a href="picture/openscad/resize.htm">
+resize</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
