OpenSCAD How to use rotate.

--- a/picture.htm
+++ b/picture.htm
@@ -123,12 +123,16 @@ cheatsheet</a><br>
     cylinder</a><br>
 
 &lowast;
-<a href="picture/openscad/translate.htm">
-translate</a><br>
-
-&lowast;
 <a href="picture/openscad/resize.htm">
 resize</a><br>
+
+&lowast;
+<a href="picture/openscad/rotate.htm">
+rotate</a><br>
+
+&lowast;
+<a href="picture/openscad/translate.htm">
+translate</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
