OpenSCAD How to use color.

--- a/picture.htm
+++ b/picture.htm
@@ -123,6 +123,10 @@ cheatsheet</a><br>
     cylinder</a><br>
 
 &lowast;
+<a href="picture/openscad/color.htm">
+color</a><br>
+
+&lowast;
 <a href="picture/openscad/resize.htm">
 resize</a><br>
 
