OpenSCAD How to use minkowski.

--- a/picture.htm
+++ b/picture.htm
@@ -141,6 +141,11 @@ rotate</a><br>
 &lowast;
 <a href="picture/openscad/translate.htm">
 translate</a><br>
+
+&lowast;
+<a href="picture/openscad/minkowski.htm">
+minkowski</a><br>
+
 <br><br><br><br>
 
 <div id="kicad"></div>
