OpenSCAD How to use difference.

--- a/picture.htm
+++ b/picture.htm
@@ -146,6 +146,9 @@ translate</a><br>
 <a href="picture/openscad/minkowski.htm">
 minkowski</a><br>
 
+&lowast;
+<a href="picture/openscad/diff.htm">
+difference</a><br>
 <br><br><br><br>
 
 <div id="kicad"></div>
