OpenSCAD How to use union.

--- a/picture.htm
+++ b/picture.htm
@@ -131,6 +131,10 @@ hull</a><br>
 color</a><br>
 
 &lowast;
+<a href="picture/openscad/union.htm">
+union</a><br>
+
+&lowast;
 <a href="picture/openscad/resize.htm">
 resize</a><br>
 
