OpenSCAD How to use linear_extrude.

--- a/picture.htm
+++ b/picture.htm
@@ -122,6 +122,10 @@ cheatsheet</a><br>
     <a href="picture/openscad/cylinder.htm">
     cylinder</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/linear_extrude.htm">
+    linear_extrude</a><br>
+
 &lowast;
 <a href="picture/openscad/hull.htm">
 hull</a><br>
