OpenSCAD How to use rotate_extrude and added references information to some pages.

--- a/picture.htm
+++ b/picture.htm
@@ -126,6 +126,10 @@ cheatsheet</a><br>
     <a href="picture/openscad/linear_extrude.htm">
     linear_extrude</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/rotate_extrude.htm">
+    rotate_extrude</a><br>
+
 &lowast;
 <a href="picture/openscad/hull.htm">
 hull</a><br>
