--- a/picture/openscad/sphere.htm
+++ b/picture/openscad/sphere.htm
@@ -48,6 +48,10 @@
 <p><b>sphere</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://openhome.cc/zh-tw/openscad/">openhome.cc</a><br>
+2. <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">OpenSCAD_User_Manual</a><br><br>
+
 使用方式：
 </p>
 <pre class="brush:scad">
