--- a/picture/openscad/syntax.htm
+++ b/picture/openscad/syntax.htm
@@ -48,6 +48,10 @@
 <p><b>基本語法</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://openhome.cc/zh-tw/openscad/">openhome.cc</a><br>
+2. <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">OpenSCAD_User_Manual</a><br><br>
+
 <b>註解(comments)</b><br>
 單行註解使用<b>//</b><br>
 多行註解則是<b>/**/</b>
