--- a/picture/openscad/rotate_extrude.htm
+++ b/picture/openscad/rotate_extrude.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>OpenSCAD</h3>
-<p><b>color</b></p>
+<h3>OpenSCAD &gt;&gt; 3D</h3>
+<p><b>rotate_extrude</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -55,13 +55,29 @@
 使用方式：
 </p>
 <pre class="brush:scad">
-color("#RRGGBB");
+rotate_extrude(angle, convexity);
 </pre>
 <p>
-P.S. RR、GG、BB代表16進制顏色(00~FF)<br><br>
+P.S. 主要功能是將2D物件旋轉(基於原點)並且轉成3D物件，因為2D圖形無法輸出STL<br><br>
 
-程式寫好後，按下F5後，就可以顯示顏色，顏色只是用來顯示，跟3D列印結果無關，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br>
-<img src="color/1.jpg" class="maxSize"><br>
+首先畫出2D圖形，程式寫好後，按下F5後，再按下F6就可以顯示，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br>
+<img src="rotate_extrude/1.jpg" class="maxSize"><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸<br><br>
+
+使用rotate_extrude後<br>
+<img src="rotate_extrude/2.jpg" class="maxSize"><br><br>
+
+輸出STL檔案<br>
+<img src="rotate_extrude/3.jpg" class="maxSize"><br><br>
+
+使用切片軟體將STL轉換成GCODE<br>
+<img src="rotate_extrude/4.jpg" class="maxSize"><br><br>
+
+3D印表機列印<br>
+<img src="rotate_extrude/5.jpg" class="maxSize"><br><br>
+
+完成<br>
+<img src="rotate_extrude/6.jpg" class="maxSize">
 </p>
 
 <p>
