OpenSCAD How to use import.

--- a/picture.htm
+++ b/picture.htm
@@ -151,6 +151,10 @@ resize</a><br>
 rotate</a><br>
 
 &lowast;
+<a href="picture/openscad/import.htm">
+import</a><br>
+
+&lowast;
 <a href="picture/openscad/translate.htm">
 translate</a><br>
 
