OpenSCAD How to use surface.

--- a/picture.htm
+++ b/picture.htm
@@ -119,6 +119,10 @@ cheatsheet</a><br>
     sphere</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/surface.htm">
+    surface</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="picture/openscad/cylinder.htm">
     cylinder</a><br>
 
