OpenSCAD How to use circle.

--- a/picture.htm
+++ b/picture.htm
@@ -108,6 +108,13 @@ OpenSCAD</h3>
 cheatsheet</a><br>
 
 &oplus;
+<b>2D</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/circle.htm">
+    circle</a><br>
+
+&oplus;
 <b>3D</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
