OpenSCAD How to use square.

--- a/picture.htm
+++ b/picture.htm
@@ -114,6 +114,10 @@ cheatsheet</a><br>
     <a href="picture/openscad/circle.htm">
     circle</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/square.htm">
+    square</a><br>
+
 &oplus;
 <b>3D</b><br>
 
@@ -140,6 +144,10 @@ cheatsheet</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="picture/openscad/rotate_extrude.htm">
     rotate_extrude</a><br>
+
+&lowast;
+<a href="picture/openscad/echo.htm">
+echo</a><br>
 
 &lowast;
 <a href="picture/openscad/hull.htm">
