OpenSCAD How to use polygon.

--- a/picture.htm
+++ b/picture.htm
@@ -118,6 +118,10 @@ cheatsheet</a><br>
     <a href="picture/openscad/square.htm">
     square</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/polygon.htm">
+    polygon</a><br>
+
 &oplus;
 <b>3D</b><br>
 
