--- a/picture/openscad/import.htm
+++ b/picture/openscad/import.htm
@@ -61,7 +61,8 @@ import(file_path, convexity);
 P.S. import支援stl、off、amf、3mf、dxf、svg、csg等格式<br><br>
 
 當3D列印檔案沒有釋出原始文件時，這時候可以使用import進行二次加工作業<br>
-<img src="import/1.jpg" class="maxSize">
+<img src="import/1.jpg" class="maxSize"><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸<br><br>
 </p>
 
 <p>
