--- a/picture/openscad/surface.htm
+++ b/picture/openscad/surface.htm
@@ -64,7 +64,8 @@ PNG檔案<br>
 <img src="surface/1.jpg" class="maxSize"><br><br>
 
 程式寫好後，按下F5後，再按下F6就可以顯示，按下滑鼠左鍵並拖曳可以旋轉方向，滑鼠右鍵則是移動顯示位置，滑鼠中鍵是縮放顯示，滑鼠的操作都不會影響STL的輸出尺寸<br>
-<img src="surface/2.jpg" class="maxSize"><br><br>
+<img src="surface/2.jpg" class="maxSize"><br>
+P.S. 單位是mm，這是3D印表機的實際列印尺寸<br><br>
 
 去頭去尾後<br>
 <img src="surface/3.jpg" class="maxSize"><br><br>
