OpenSCAD How to use text.

--- a/picture.htm
+++ b/picture.htm
@@ -111,6 +111,10 @@ cheatsheet</a><br>
 <b>2D</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="picture/openscad/text.htm">
+    text</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="picture/openscad/circle.htm">
     circle</a><br>
 
