MASM32 How to handle event for sdi window.

--- a/program.htm
+++ b/program.htm
@@ -616,6 +616,13 @@ Hello, world!</a><br>
     <a href="program/masm32/dlg_event.htm">
     Handle Event</a><br>
 
+&oplus;
+<b>Single Document Interface (SDI)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/sdi_event.htm">
+    Handle Event</a><br>
+        
 &lowast;
 <a href="program/masm32/keyboard.htm">
 Keyboard Event</a><br>
