MASM32 How to create sdi window.

--- a/program.htm
+++ b/program.htm
@@ -620,6 +620,10 @@ Hello, world!</a><br>
 <b>Single Document Interface (SDI)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/sdi_window.htm">
+    Create Window</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/sdi_event.htm">
     Handle Event</a><br>
         
