--- a/program/masm32/sdi_window.htm
+++ b/program/masm32/sdi_window.htm
@@ -109,10 +109,15 @@ start:
 end start
 </pre>
 <p>
+<b>Line 19~38</b>：proc、endp用來定義Procedure的區間<br>
+<b>Line 20</b>：Local變數宣告方式<br>
 <b>Line 22~24</b>：一般SDI視窗會註冊屬於自己的Class並且設定事件處理副程式，目前司徒著重在說明如何建立Windows視窗，因此，我們使用系統預設的事件處理副程式(DefWindowProc)，視窗訊息統一交給系統幫忙處理，由於是自定義的Class，因此，需要幫這個Class設定一個名字，之後就可以用這個Class名字來建立Windows視窗<br>
 <b>Line 26~27</b>：使用剛剛註冊的Class來建立Windows視窗，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
+<b>Line 29</b>：暫時性的Label，不需要指定名稱，適合小範圍的應用，但需要搭配@f、@b使用<br>
 <b>Line 30</b>：從Queue提取Message(包含視窗、系統事件)<br>
+<b>Line 32</b>：@f(forward)代表會跳到下一個@@位置(Line 30)<br>
 <b>Line 33</b>：分發Message到處理視窗事件的副程式，由於目前註冊的處理副程式是使用系統預設(DefWindowProc)，因此，無法處理這個SDI視窗的Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br>
+<b>Line 34</b>：@b(back)代表會跳到上一個@@位置(Line 24)<br>
 <b>Line 41~45</b>：一般習慣是在程式進入時，保存Instance、CommandLine的內容<br>
 <b>Line 47</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()，當然也可以把內容都寫在start()裡面<br><br>
 
