High Level Assembly (HLA) How to create sdi window.

--- a/program.htm
+++ b/program.htm
@@ -710,6 +710,13 @@ hello, world!</a><br>
         <a href="program/hla/win32_dlg_event.htm">
         Handle Event</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    <b>Single Document Interface (SDI)</b><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_sdi_window.htm">
+        Create Window</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/hla/win32_keyboard.htm">
     Keyboard Event</a><br>
