--- a/program.htm
+++ b/program.htm
@@ -717,6 +717,10 @@ hello, world!</a><br>
         <a href="program/hla/win32_sdi_window.htm">
         Create Window</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_sdi_event.htm">
+        Handle Event</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/hla/win32_keyboard.htm">
     Keyboard Event</a><br>
