--- a/program/masm32/sdi_event.htm
+++ b/program/masm32/sdi_event.htm
@@ -97,7 +97,7 @@ WinMain proc hInst:DWORD, hPrevInst:DWORD, CmdLine:DWORD, CmdShow:DWORD
 
     mov wndClass.lpfnWndProc, WndProc
     mov wndClass.lpszClassName, offset szName
-    invoke RegisterClass, addr wndClass
+    invoke RegisterClass, offset wndClass
 
     invoke CreateWindowEx, WS_EX_LEFT, offset szName, offset szName, 
         WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
