FASM How to create sdi window.

--- a/program.htm
+++ b/program.htm
@@ -833,6 +833,13 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_dlg_event.htm">
             Handle Event</a><br>
         
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        <b>Single Document Interface (SDI)</b><br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_sdi_window.htm">
+            Create Window</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_keyboard.htm">
         Keyboard Event</a><br>
