FASM How to handle event for sdi window.

--- a/program.htm
+++ b/program.htm
@@ -840,6 +840,10 @@ Flat Assembler (FASM)</h3>
             <a href="program/fasm/win32_sdi_window.htm">
             Create Window</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/fasm/win32_sdi_event.htm">
+            Handle Event</a><br>
+        
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/win32_keyboard.htm">
         Keyboard Event</a><br>
