TRIMUI SMART Added review page.

--- a/handheld.htm
+++ b/handheld.htm
@@ -160,6 +160,7 @@
     <a href="#bp2"><img src="img/photos/bp2.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="KONAMI Bemani Pocket 2"/></a>
     <a href="#pocketsprite"><img src="img/photos/pocketsprite.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PocketSprite"/></a>
     <a href="#trimui"><img src="img/photos/trimui.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="TRIMUI"/></a>
+    <a href="#trimui-smart"><img src="img/photos/trimui-smart.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="TRIMUI SMART"/></a>
     <a href="#gw"><img src="img/photos/gw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game &amp; Watch: Super Mario Bros."/></a>
     <a href="#gw_z"><img src="img/photos/gw_z.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game &amp; Watch: The Legend of Zelda"/></a>
     <a href="#gc"><img src="img/photos/gc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Game &amp; Console"/></a>
@@ -4382,7 +4383,16 @@ build mininit</a><br>
 &lowast;
 <a href="handheld/trimui/build_buildroot.htm">
 build buildroot</a><br>
+<br><br><br><br>
 
+<div id="trimui-smart"></div>
+<h3><img src="img/photos/trimui-smart.jpg" class="floatLeft"/>
+TRIMUI SMART</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/trimui-smart/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
