--- a/program.htm
+++ b/program.htm
@@ -988,9 +988,9 @@ Wine</h3>
             <a href="program/wine/cpp_polygon.htm">
             Draw Polygon</a><br>
                     
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="program/wine/cpp_dlg_arc.htm">
-                Arc</a><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/wine/cpp_arc.htm">
+            Draw Arc</a><br>
                     
                 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
                 <a href="program/wine/cpp_dlg_chord.htm">
