MinGW How to draw arc.

--- a/program.htm
+++ b/program.htm
@@ -1198,6 +1198,10 @@ MinGW</h3>
             <a href="program/mingw/cpp_polygon.htm">
             Draw Polygon</a><br>
 
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/mingw/cpp_arc.htm">
+            Draw Arc</a><br>
+
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/mingw/enum_hid.htm">
         Enumerate USB HID</a><br>
