--- a/program/wine/cpp_arc.htm
+++ b/program/wine/cpp_arc.htm
@@ -55,7 +55,7 @@
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
 使用方式：<br>
-<img src="cpp_arc/1.jpg" class="maxSize"><br><br>
+<img src="../nasm/win32_arc/1.jpg" class="maxSize"><br><br>
 
 main.c
 </p>
@@ -118,7 +118,7 @@ $ winegcc main.c -o main -lgdi32
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="../nasm/win32_arc/1.jpg" class="maxSize">
+<img style="border:0px" src="../nasm/win32_arc/2.jpg" class="maxSize">
 </p>
 
 <p>
