--- a/program/nasm/win32_pen.htm
+++ b/program/nasm/win32_pen.htm
@@ -167,7 +167,7 @@ main.asm
     SB_VERT             equ 1
     SW_SHOWNORMAL       equ 1h
     WC_DIALOG           equ 8002h
-    WM_PAINT            equ 0Fh
+    WM_PAINT            equ 0fh
     WM_VSCROLL          equ 115h
     WM_TIMER            equ 113h
     WM_MOUSEMOVE        equ 200h
