--- a/program/nasm/win32_pixel.htm
+++ b/program/nasm/win32_pixel.htm
@@ -140,7 +140,7 @@ main.asm
         .SIZE:
     endstruc
  
-    WM_PAINT            equ 0Fh
+    WM_PAINT            equ 0fh
     SB_LINEUP           equ 0
     SB_LINELEFT         equ 0
     SB_LINEDOWN         equ 1
