--- a/phone.htm
+++ b/phone.htm
@@ -2267,6 +2267,10 @@ F(x)tec Pro1</h3>
     解決卡在"Enter secure code"畫面的問題</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/pro1/sfos_fix_bcmp.htm">
+    解決"undefined reference to bcmp"問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pro1/sfos_fix_clang.htm">
     解決"undefined reference to stpcpy"問題</a><br>
 <br><br><br><br>
