F(x)tec Pro1 Refined.

--- a/phone/pro1/sfos_fix_clang.htm
+++ b/phone/pro1/sfos_fix_clang.htm
@@ -52,7 +52,7 @@
 1. <a href="https://github.com/kdrag0n/proton_zf6/commit/cec73f0775526">patch</b><br>
 2. <a href="https://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next.git/commit/?id=5934637641c863cc2c1765a0d01c5b6f53ecc4fc">commit</a><br><br>
 
-添加如下程式到lib/string.c
+添加如下程式到<b>lib/string.c</b>
 </p>
 <pre class="brush:cpp">
 char *stpcpy(char *__restrict__ dest, const char *__restrict__ src);
