F(x)tec Pro1 X Refined.

--- a/phone/pro1x/review.htm
+++ b/phone/pro1x/review.htm
@@ -52,7 +52,7 @@
 簡要規格
 </p>
 <table>
-<tr><th>CPU</th><td>Qualcomm Snapdragon 662</td></tr>
+<tr><th>CPU</th><td>Qualcomm Snapdragon 662 SM6115</td></tr>
 <tr><th>GPU</th><td>Adreno 510</td></tr>
 <tr><th>RAM</th><td>8GB</td></tr>
 <tr><th>Main Camera</th><td>12MP</td></tr>
