Debian How to extract dtb from zImage.

--- a/system.htm
+++ b/system.htm
@@ -141,6 +141,10 @@ clang-format</a><br>
 Decompiler DTB</a><br>
 
 &lowast;
+<a href="system/debian/extract_dtb.htm">
+從zImage取出DTB</a><br>
+
+&lowast;
 <a href="system/debian/reverse_zimage.htm">
 Extract zImage</a><br>
 
