SF2000 Added screen images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -167,6 +167,7 @@
     <a href="#gb-35"><img src="img/photos/gb-35.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GB-35"/></a>
     <a href="#gamespower"><img src="img/photos/gamespower.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Games Power"/></a>
     <a href="#fc3000"><img src="img/photos/fc3000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="FC3000"/></a>
+    <a href="#sf2000"><img src="img/photos/sf2000.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SF2000"/></a>
     <a href="#qboy"><img src="img/photos/qboy.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="QBoy"/></a>
     <a href="#j9"><img src="img/photos/j9.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="J9"/></a>
     <a href="#n800"><img src="img/photos/n800.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="N800"/></a>
@@ -4846,6 +4847,16 @@ build kernel</a><br>
 &lowast;
 <a href="handheld/fc3000/build_mininit.htm">
 build mininit</a><br>    
+<br><br><br><br>
+
+<div id="sf2000"></div>
+<h3><img src="img/photos/sf2000.jpg" class="floatLeft"/>
+SF2000</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="handheld/sf2000/screen.htm">
+可視角</a><br>
 <br><br><br><br>
 
 <div id="qboy"></div>
