SF2000 Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4855,6 +4855,10 @@ SF2000</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="handheld/sf2000/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/sf2000/screen.htm">
 可視角</a><br>
 <br><br><br><br>
