--- a/handheld/sf2000/teardown.htm
+++ b/handheld/sf2000/teardown.htm
@@ -48,7 +48,7 @@
 <p><b>拆機</b></p>
 <hr size="1">
 <p>
-580台幣的掌機，這台機器相當對得起這個價格，可玩行相當不錯，可惜，寨機的水太深了，司徒碰不得，因此，拆機是它最後的歸宿～<br>
+580台幣的掌機，這台機器相當對得起這個價格，可玩性相當不錯，可惜，寨機的水太深了，司徒碰不得，因此，拆機是它最後的歸宿～<br>
 <img src="teardown/1.jpg" class="maxSize"><br><br>
 
 電源按鍵、USB Type-C、MicroSD、耳機孔、音量鍵<br>
