--- a/mcu.htm
+++ b/mcu.htm
@@ -140,6 +140,7 @@
     <a href="#rm08s"><img src="img/photos/rm08s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS 24KEc) MT7688 (HLK-RM08S)"/></a>
     <a href="#ubw32"><img src="img/photos/ubw32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MIPS M4K) PIC32MX795 (UBW32)"/></a>
     <a href="#risc-v"><img src="img/photos/risc-v.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="RISC-V"/></a>
+    <a href="#ox64"><img src="img/photos/ox64.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(T-Head C906 + T-Head E907) Ox64"/></a>
     <a href="#d1-h"><img src="img/photos/d1-h.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) C906 (哪吒)"/></a>
     <a href="#f133"><img src="img/photos/f133.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISV-V) F133 (MangoPi MQ-R)"/></a>
     <a href="#gd32vf103"><img src="img/photos/gd32vf103.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(RISC-V) GD32VF103 (Sipeed Longan Nano)"/></a>
@@ -3321,9 +3322,15 @@ RISC-V</h3>
 Register</a><br>
 <br><br><br><br>
 
+<div id="ox64"></div>
+<h3><img src="img/photos/ox64.jpg" class="floatLeft"/>
+<b>(T-Head C906 + T-Head E907)</b> BL808 (Ox64)</h3>
+<hr size="1"><br><br><br><br><br>
+<br><br><br><br>
+
 <div id="d1-h"></div>
 <h3><img src="img/photos/d1-h.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> C906 (哪吒)</h3>
+<b>(T-Head C906)</b> D1-H (哪吒)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -3333,7 +3340,7 @@ Register</a><br>
 
 <div id="f133"></div>
 <h3><img src="img/photos/f133.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> F133-A (MangoPi MQ-R)</h3>
+<b>(T-Head C906)</b> F133-A (MangoPi MQ-R)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
@@ -3343,7 +3350,7 @@ Register</a><br>
 
 <div id="gd32vf103"></div>
 <h3><img src="img/photos/gd32vf103.jpg" class="floatLeft"/>
-<b>(RISC-V)</b> GD32VF103 (Sipeed Longan Nano)</h3>
+<b>(RV32IMAC)</b> GD32VF103 (Sipeed Longan Nano)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
