(T-Head C906 + T-Head E907) BL808 (Ox64) Added pinout image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -3326,6 +3326,10 @@ Register</a><br>
 <h3><img src="img/photos/ox64.jpg" class="floatLeft"/>
 <b>(T-Head C906 + T-Head E907)</b> BL808 (Ox64)</h3>
 <hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/ox64/pinout.htm">
+接腳</a><br>
 <br><br><br><br>
 
 <div id="d1-h"></div>
