--- a/handheld.htm
+++ b/handheld.htm
@@ -4394,6 +4394,10 @@ TRIMUI SMART</h3>
 &lowast;
 <a href="handheld/trimui-smart/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="handheld/trimui-smart/screen.htm">
+可視角</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
