TRIMUI SMART Added teardown images.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4396,6 +4396,10 @@ TRIMUI SMART</h3>
 介紹</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/teardown.htm">
+拆機</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/screen.htm">
 可視角</a><br>
 <br><br><br><br>
