TRIMUI SMART Workaound for LED issue.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4402,6 +4402,10 @@ TRIMUI SMART</h3>
 &lowast;
 <a href="handheld/trimui-smart/screen.htm">
 可視角</a><br>
+
+&lowast;
+<a href="handheld/trimui-smart/led.htm">
+改善LED太亮的問題</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
