TRIMUI SMART Refined.

--- a/handheld/trimui-smart/teardown.htm
+++ b/handheld/trimui-smart/teardown.htm
@@ -48,7 +48,7 @@
 <p><b>拆機</b></p>
 <hr size="1">
 <p>
-1600台幣的價格，Trimui Smart終於回到該有的價位，做工相當不錯，對於小掌機來說，確實是一台值得擁有的掌機，以規格面相來看，應該可以算是Wiz的接班人，可惜寨機的水太深，司徒碰不得，因此，司徒不會再針對寨機發布任何研究成果，因此，請不要寫Email來索取，司徒會直接加入黑名單～<br>
+1600台幣的價格，Trimui Smart終於回到該有的價位，做工相當不錯，對於小掌機來說，確實是一台值得擁有的掌機，以規格面相來看，應該可以算是Wiz的接班人，可惜寨機的水太深，司徒碰不得，因此，司徒不會再針對寨機發布任何研究成果，因此，請不要Email來信索取，司徒會直接加入黑名單～<br>
 <img src="teardown/1.jpg" class="maxSize"><br><br>
 
 MicroSD、USB Type-C<br>
@@ -102,7 +102,7 @@ FPC<br>
 正面<br>
 <img src="teardown/18.jpg" class="maxSize"><br><br>
 
-UART Debug、KLM8G1GETF-B041、Allwinner S3(Sochip S3)，還有一個SPI座～<br>
+UART Debug、KLM8G1GETF-B041、Allwinner S3(Sochip S3)，另外，還有SPI、32KHz振盪器腳位～<br>
 <img src="teardown/19.jpg" class="maxSize"><br><br>
 
 LTK8002D、RTL8723DS<br>
