--- a/handheld.htm
+++ b/handheld.htm
@@ -4404,6 +4404,10 @@ TRIMUI SMART</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/busclock.htm">
+Bus Clock</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/bootmode.htm">
 Boot Mode</a><br>
 
