TRIMUI SMART Added system bus image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4412,6 +4412,10 @@ Bus Clock</a><br>
 Boot Mode</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/systembus.htm">
+System Bus</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/led.htm">
 改善LED太亮的問題</a><br>
 <br><br><br><br>
