--- a/handheld.htm
+++ b/handheld.htm
@@ -4412,6 +4412,10 @@ Bus Clock</a><br>
 Boot Mode</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/mmap.htm">
+Memory Map</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/systembus.htm">
 System Bus</a><br>
 
