TRIMUI SMART Added lcd port image.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4404,6 +4404,10 @@ TRIMUI SMART</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/led.htm">
+改善LED太亮的問題</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/busclock.htm">
 Bus Clock</a><br>
 
@@ -4420,8 +4424,8 @@ Memory Map</a><br>
 System Bus</a><br>
 
 &lowast;
-<a href="handheld/trimui-smart/led.htm">
-改善LED太亮的問題</a><br>
+<a href="handheld/trimui-smart/lcdmap.htm">
+LCD Data Port Map</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
