--- a/handheld.htm
+++ b/handheld.htm
@@ -4404,6 +4404,10 @@ TRIMUI SMART</h3>
 可視角</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/uart.htm">
+UART腳位</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/led.htm">
 改善LED太亮的問題</a><br>
 
