TRIMUI SMART Added pinout table.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4400,6 +4400,10 @@ TRIMUI SMART</h3>
 拆機</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/pinout.htm">
+接腳</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/screen.htm">
 可視角</a><br>
 
