TRIMUI SMART Refined.

--- a/handheld/trimui-smart/uart.htm
+++ b/handheld/trimui-smart/uart.htm
@@ -48,6 +48,24 @@
 <p><b>UART腳位</b></p>
 <hr size="1">
 <p>
+司徒找到一個還不錯的位置<br>
+<img src="uart/1.jpg" class="maxSize"><br><br>
+
+裝入後<br>
+<img src="uart/2.jpg" class="maxSize"><br><br>
+
+需要挖掉一些東西<br>
+<img src="uart/3.jpg" class="maxSize"><br><br>
+
+還算可以～<br>
+<img src="uart/4.jpg" class="maxSize"><br><br>
+
+縫隙等之後在用3D印表機列印補起來～<br>
+<img src="uart/5.jpg" class="maxSize"><br><br>
+
+連接UART<br>
+<img src="uart/6.jpg" class="maxSize"><br><br>
+
 115200bps
 </p>
 <pre>
