TRIMUI SMART How to prepare development environment.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4434,6 +4434,13 @@ System Bus</a><br>
 &lowast;
 <a href="handheld/trimui-smart/lcdmap.htm">
 LCD Data Port Map</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="mcu/v3s/asm_setup.htm">
+    開發環境</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
