TRIMUI SMART How to blink LED in assembly.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4416,6 +4416,10 @@ UART腳位</a><br>
 改善LED太亮的問題</a><br>
 
 &lowast;
+<a href="handheld/miyoo/mksunxi.htm">
+mksunxi.c</a><br>
+
+&lowast;
 <a href="handheld/trimui-smart/busclock.htm">
 Bus Clock</a><br>
 
@@ -4441,6 +4445,10 @@ LCD Data Port Map</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="mcu/v3s/asm_setup.htm">
     開發環境</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/trimui-smart/asm_led.htm">
+    LED</a><br>
 <br><br><br><br>
 
 <div id="gw"></div>
