TRIMUI SMART Added cpu information.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4416,6 +4416,10 @@ UART腳位</a><br>
 改善LED太亮的問題</a><br>
 
 &lowast;
+<a href="handheld/trimui-smart/cpuinfo.htm">
+CPU Info</a><br>
+
+&lowast;
 <a href="handheld/miyoo/mksunxi.htm">
 mksunxi.c</a><br>
 
